--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,7 +39,9 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "lorem-ipsum": "^2.0.3",
     "react-lorem-ipsum": "^1.4.9"
-  }
+  },
+  "homepage": "http://charliebarger.github.io/mini-cactus-shop"
 }
