--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mini-cactus-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://charliebarger.github.io/mini-cactus-shop",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -42,6 +43,5 @@
     "gh-pages": "^3.2.3",
     "lorem-ipsum": "^2.0.3",
     "react-lorem-ipsum": "^1.4.9"
-  },
-  "homepage": "http://charliebarger.github.io/mini-cactus-shop"
+  }
 }
